<resources>
    <string name="app_name">ACalculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="example_email">example@email.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="clear_history">Clear History</string>
</resources>
